Introduced *BorderedEntry* and it's Custom Renderers against *Android* and *iOS* projects.

--- a/XamarinFormsCustomRenderer/XamarinFormsCustomRenderer.Droid/XamarinFormsCustomRenderer.Droid.csproj
+++ b/XamarinFormsCustomRenderer/XamarinFormsCustomRenderer.Droid/XamarinFormsCustomRenderer.Droid.csproj
@@ -110,6 +110,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Renderers\BorderedDrawable.cs" />
+    <Compile Include="Renderers\BorderedEntryRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
