--- a/XamarinFormsCustomRenderer/XamarinFormsCustomRenderer/XamarinFormsCustomRenderer.csproj
+++ b/XamarinFormsCustomRenderer/XamarinFormsCustomRenderer/XamarinFormsCustomRenderer.csproj
@@ -38,11 +38,14 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="InvertBooleanConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainPageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\BorderedEntry.cs" />
+    <Compile Include="Renderers\FontAwesomeLabel.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
